[package]
name = "rusty-splash"
version = "0.1.0"
edition = "2021"
description = "Preview and download official League of Legends champion splash art via Riot's DataDragon web api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
dirs = "5.0.1"
image = "0.24.7"
open = "5.0.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
